task: fixed appbar button and search box overlapping tinymce

--- a/src/shell/views/Shell/Shell.less
+++ b/src/shell/views/Shell/Shell.less
@@ -39,7 +39,6 @@
       overflow: hidden;
       //box-shadow: 0px 0px 25px #0b0d13;
       position: relative;
-      z-index: 30;
 
       /* Safari 10.1+  fix media selected modal
       overlapped by GlobalSidebar & GlobalTopBar */
